--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,25 @@
-# Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+# Dependencies
+markdown:         redcarpet
+highighter:       true
 
-# Build settings
-markdown: kramdown
+# Permalinks
+permalink:        /blog/:title
+
+# Setup
+title:            Carrie Jackson
+tagline:          "I'm a a web designer & maker"
+description:      'Life can be really tough and confusing at times. This site is here to help you navigate through your teenage years.'
+url:              http://carrie.mojaworks.co.uk
+
+author:
+  name:           'Carrie Jackson'
+  url:            http://carrie.mojaworks.co.uk
+
+paginate:         10
+
+# Custom vars
+version:          2.0.0
+
+github:
+  repo:           ''
+baseurl:          ''
