--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Dependencies
 markdown:         redcarpet
 highighter:       true
+baseurl: /carrie-2015
 
 # Permalinks
 permalink:        /blog/:title
